# embediq-cloud

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .pre-commit-config.yaml  .vale.ini  ARCHITECTURE.md  CHANGELOG.md  CODING_RULES.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  STANDARDS.md  docker-compose.integration.yml  docker-compose.lite.yml  docker-compose.media.yml  docker-compose.prod.yml  docker-compose.yml  install.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/styles/EmbedIQ/: Filler.yml  Passive.yml  SentenceLength.yml
.github/workflows/: ci.yml  integration.yml  release.yml
app/: __init__.py  auth.py  bridge.py  config.py  db.py  envelope.py  hawkbit.py  main.py  mqtt_pub.py  ota.py  registry.py  shadow.py  ui.py
app/static/: app.js  design-system.css  device.js  fleet.js  login.js  ota.js  overview.js  settings.js
app/templates/: base.html  device.html  fleet.html  login.html  ota.html  overview.html  settings.html
config/grafana/provisioning/dashboards/: dashboards.yaml  embediq-fleet.json
config/grafana/provisioning/datasources/: datasources.yaml
config/loki/: loki-config.yaml
config/mediamtx/: mediamtx.yml
config/mosquitto/: aclfile  mosquitto.conf  mosquitto.prod.conf
docs/: DEPLOYMENT.md  DOCUMENTATION_STANDARD.md  README.md  RELEASE.md  UI_DESIGN.md
scripts/: check_doc_sections.py  check_headers.py  dev-with-broker.sh  dev.sh  gen-certs.sh
tests/: __init__.py  conftest.py  test_auth.py  test_bridge.py  test_envelope.py  test_groups.py  test_health.py  test_internal_auth.py  test_ota.py  test_publish.py  test_registry.py  test_shadow.py  test_sim_device.py  test_system.py  test_ui.py  test_verify_release.py
tests/integration/: __init__.py  conftest.py  sim_device.py  test_e2e.py
